syntax = "proto3";

option go_package = "book/pb";

message Empty {}

message OperationResponse {
    bool is_affected = 1;
}